tests/negative/regression/r9.orng
let x : unreachable = 3